# Game-Engine

./: CMakeLists.txt  Doxyfile  README.md
contrib/msvc-windows-amd64/lib/: OpenAL32.lib
contrib/msvc-windows-x86/lib/: OpenAL32.lib
resources/Shaders/: vertfrag.shader
src/demo/: Player.cpp  Player.h  main.cpp
src/engine/: BoxCollider.cpp  BoxCollider.h  Camera.cpp  Camera.h  CollisionManager.h  Component.cpp  Component.h  Core.cpp  Core.h  Entity.cpp  Entity.h  Exception.cpp  Exception.h  Keyboard.cpp  Keyboard.h  MeshRenderer.cpp  MeshRenderer.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Sound.cpp  Sound.h  SoundSource.cpp  SoundSource.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  myEngine.h  stb_vorbis.h
